# giftray_py

./: .gitignore  AppxManifest.xml  Makefile  README  See-All.html  giftray.spec  ico.py  ico2.py  svg2html.py  test4.py  test5.py
conf/: 00-alwaysactive.conf.example  00-alwaysontop.conf.example  00-scripts.conf.example  00-submenu.conf.example  00-template.conf.example  01-wsl.conf.example  02-Terminator.conf  02-kill.conf.example  02-power.conf.example  02-scripts.conf.example  03-android.conf.example  03-tools.conf.example  04.audio.conf.example  05.driver.conf.example  06-submenu.conf.example  07-alwaysactive.conf.example  07.split.conf.example  1-terminator.conf  11-Terminator.conf  2-nothing.conf  current.json  giftray.conf  giftray.conf.example  giftray.json  giftray.qss.example  list_key.txt  style2.qss
conf/future/: 03-android.conf.example
setup/: setup.cfg  setup.py
src/: GifTray.py  feature.py  general.py  giftray.py  icon-dll.py  icon.py  main.py  resources.res  setup.cfg  setup.py  svg2html.py  template.py  tmp.py  wsl.py
src/giftray/: __init__.py  _feature.py  _general.py  _icon.py  _template.py  _var.py  _windows.py  _wsl.py  giftray.py  program.py
svg/: README-svg-modifier  SVG-Repo.url
