[metadata]
name = GifTray
version = 0.1
description = Tray and Hotkeys for custom shortcuts and commands
[build_exe]
#excludes = tkinter,unittest
#zip_include_packages = encodings,PySide6
excludes = colorama,curses,distutils,email,html,http,idna,lib2to3,pip,pydoc_data,pywin32_system32,test,unittest,wheel,xml,xmlrpc
packages = PyQt6.QtGui,PyQt6.QtWidgets,configparser,ctypes,datetime,functools,inspect,io,logging,notifypy,os,posixpath,psutil,shutil,signal,subprocess,sys,threading,time,trace,win32api,win32con,win32gui,win32process,winxpgui
includes = icon,general,feature,wsl
include_files = ../build/icons,../build/conf
[bdist_msi]
initial_target_dir = [ProgramFilesFolder]/GifTray2
install_icon = ../build/icons/giftray.ico
