[metadata]
name = GifTray
version = 0.1
description = GifTray
#Tray and Hotkeys for custom shortcuts and commands
[build_exe]
#zip_include_packages = encodings,PySide6
excludes = colorama,curses,distutils,email,html,http,idna,lib2to3,pip,pydoc_data,pywin32_system32,test,unittest,wheel,xml,xmlrpc
packages = PyQt6.QtGui,PyQt6.QtWidgets,configparser,copy,ctypes,datetime,functools,inspect,io,logging,natsort,notifypy,os,posixpath,psutil,shutil,signal,subprocess,sys,threading,time,trace,win32api,win32con,win32gui,win32process,winxpgui
includes = giftray
include_files = ../build/icons,../build/conf
optimize = 2
[bdist_msi]
all_users = yes
initial_target_dir = [ProgramFilesFolder]\\GifTray
install_icon = ../build/icons/giftray.ico
